Started adding first lab

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
     <span>Проектирование информационных систем (2019)</span>
+    <span class="fill-space"></span>
+    <button mat-button color="foreground">Лабораторные работы</button>
+    <button mat-button color="foreground">Отчет</button>
   </mat-toolbar-row>
 </mat-toolbar>
