--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,25 @@
 <app-toolbar></app-toolbar>
+<mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Лабораторная работа 1
+          </mat-panel-title>
+          <mat-panel-description>
+            Разметка личной страницы, разработка UML Use Case
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <img src="http://www.plantuml.com/plantuml/png/jLGzRzDG5DtzAwuyqQ53uhRfm524L1QGkZ0Zaveq8hKhsva0oN741sf5cK7YOs9rcfgOf77-mht_YFFUSvIODYDJTEvvzznpF-A3A7R3k7_QithUYvZYWC9kvoIcusxejUDku5jkEmv2EceyQv0RaSq_9PKXNtFESqdj5Tqqz1SPIiAPf5nAiaOxXlwAlEc_fA5-WPfnoLVgYMqXVF_rzhQkl0wQwy2nh3Et_TBjU13umHbFL74UGJ_bAMV42mGAhVjRMUP2BcrwPH7r8w_jHXuTLkM_yGBaGCxv2Wgvf0I1acyGBf6dsvNpEmL91eZhnwLyb0lvH1XG0PcnieFm3JAVFdbC3uFJiy3t_DXUTr2DxZkNI1jhxnbSp22nz89G3dEfcWyivgf0Xkfp3VJ41wO1peofMWMdsXtI9yWqchTRsI15-CdeWT_fzzoGMZNbdSexRcAa7Kzbk5bT2ybRBdKl1U0OqKVT-AJ_d8wmngWclllV1xEtQVd8p7c2NcPoeSgQvQE4NlGCKilb0-YBMvqzY9B_qEeKaQexLyxbVKNhGnzjA_EILERUSLwprrfEDp5_34daKjkxxKIrFe7CzPrzxXkXpyg6Se6d1SI6bPY-YxdUtWSZjT0brKfpTRqGCzy0_E_k7JQsQh1PXquTxjJXRXtkLR1fOAk2Ze7xMzORwy3pZ_65-Wi0" alt="Uml Use Case">
+</mat-expansion-panel>
+<mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Лабораторная работа 2
+          </mat-panel-title>
+          <mat-panel-description>
+            
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+</mat-expansion-panel>
+<mat-card>Материкин В.В. Остальные лабораторные будут заполнены позднее</mat-card>
 
 <router-outlet></router-outlet>
