--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar-row>
     <span>Проектирование информационных систем (2019)</span>
     <span class="fill-space"></span>
-    <button mat-button color="foreground">Лабораторные работы</button>
-    <button mat-button color="foreground">Отчет</button>
+    <button mat-button color="foreground" routerLink="/labs">Лабораторные работы</button>
+    <button mat-button color="foreground" routerLink="/referat">Реферат</button>
   </mat-toolbar-row>
 </mat-toolbar>
