--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
                 </p>
               </mat-card-content>
               <mat-card-actions>
-                <button mat-button>Github</button>
+                  <a mat-button target="_blank" href="https://github.com/Viska97/design2019">Github</a>
               </mat-card-actions>
             </mat-card>
       </div>
