--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
         <a mat-button color="foreground" routerLink="/project">Проект</a>
       </div>
     </mat-sidenav>
-    <mat-sidenav-content fxFlexFill>
+    <mat-sidenav-content fullscreen fxFlexFill>
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
