--- a/src/app/lab/lab.component.html
+++ b/src/app/lab/lab.component.html
@@ -1,7 +1,7 @@
 <div class="labs-container">
     <div *ngFor="let lab of labs" class="lab-item">
         <mat-expansion-panel>
-          <mat-expansion-panel-header collapsedHeight="*" expandedHeight="*">
+          <mat-expansion-panel-header>
             <mat-panel-title>
               {{lab.title}}
             </mat-panel-title>
