--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -7,7 +7,7 @@
               <div fxFlex><strong>Backend:</strong> Java, Spring Framework, MongoDB</div>
             </div>
             <div fxLayout="row wrap" fxFlex>
-              <div fxFlex><strong>Fronted:</strong> Angular 7 SPA</div>
+              <div fxFlex><strong>Frontend:</strong> Angular 7 SPA</div>
             </div>
           </div>
         </mat-card-content>
